# LRL

./: .gitmodules  CMakeLists.txt  LICENSE.md  README.md
Tests/: CMakeLists.txt
Tests/include/lrl/tests/: types.hpp
Tests/include/lrl_tests/: types.hpp
Tests/src/: main.cpp
Tests/src/algorithm/: for_each.cpp
Tests/src/functional/algorithm/: find_if.cpp  for_each.cpp  remove_if.cpp
Tests/src/functional/containers/: get.cpp  type_array.cpp
Tests/src/functional/functional/: invoke.cpp  invoke_with_functor.cpp
Tests/src/functional/iterators/: begin.cpp  end.cpp  tuple_iterator.cpp
Tests/src/integration/: integration.cpp
Tests/src/iterators/: begin.cpp  begin_end.cpp  end.cpp
include/lrl/algorithm/: algorithm.hpp
include/lrl/containers/: get.hpp  type_array.hpp
include/lrl/functional/: functional.hpp
include/lrl/iterators/: index_iterator.hpp  iterators.hpp  tuple_iterator.hpp  type_array_iterator.hpp
